// ============================================================================
// /finance/treasury-service (版本 1.5 - 生产级完整版)
// 描述: 提供银行对账单处理、付款运行执行及与其相关的生命周期管理功能。
// ----------------------------------------------------------------------------
// 设计基线：
// - 支持多格式对账单导入 (MT940, CAMT.053, etc.)
// - 支持异步付款运行执行 (类似 SAP F110)
// - 统一使用 common.v1 基础类型
// ============================================================================

syntax = "proto3";

package fi.tr.v1;

option go_package = "github.com/enterprise/erp/protos/fi/tr;tr";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "common/common.proto";

// OpenAPI 全局配置
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Treasury Service API"
    version: "1.0.0"
    description: "资金管理服务 - 提供银行对账单处理与付款运行管理"
    contact: {
      name: "Treasury Team"
      email: "treasury@"
    }
  }
  host: "localhost:8083"
  base_path: "/"
  schemes: HTTP
  schemes: HTTPS
  consumes: "application/json"
  produces: "application/json"
  security_definitions: {
    security: {
      key: "bearer_auth"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Bearer token for authentication"
      }
    }
  }
  security: {
    security_requirement: {
      key: "bearer_auth"
      value: {}
    }
  }
};

// ============================================================================
// 服务定义: TreasuryService
// ============================================================================

service TreasuryService {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    description: "资金管理服务"
  };

  // --------------------------------------------------------------------------
  // === 银行对账单管理 ===
  // --------------------------------------------------------------------------

  // 处理银行对账单 (异步模式)
  rpc ProcessBankStatement(ProcessBankStatementRequest) returns (common.v1.JobInfo) {
    option (google.api.http) = {
      post: "/api/v1/finance/treasury/bank-statements:process"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Bank Statement"
      summary: "处理银行对账单"
    };
  }

  // 获取银行对账单详情
  rpc GetBankStatementDetail(GetBankStatementRequest) returns (BankStatementDetail) {
    option (google.api.http) = {
      get: "/api/v1/finance/treasury/bank-statements/{statement_id}"
    };
  }

  // 查询银行对账单列表
  rpc ListBankStatements(ListBankStatementsRequest) returns (ListBankStatementsResponse) {
    option (google.api.http) = {
      get: "/api/v1/finance/treasury/bank-statements"
    };
  }

  // --------------------------------------------------------------------------
  // === 付款运行管理 (Payment Run / F110) ===
  // --------------------------------------------------------------------------

  // 执行付款运行 (异步模式)
  rpc ExecutePaymentRun(ExecutePaymentRunRequest) returns (common.v1.JobInfo) {
    option (google.api.http) = {
      post: "/api/v1/finance/treasury/payment-runs:execute"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Payment Run"
      summary: "执行付款运行"
    };
  }

  // 取消付款运行
  rpc CancelPaymentRun(CancelPaymentRunRequest) returns (common.v1.JobInfo) {
    option (google.api.http) = {
      delete: "/api/v1/finance/treasury/payment-runs/{run_id}"
    };
  }

  // 获取付款运行详情
  rpc GetPaymentRunStatus(GetPaymentRunRequest) returns (PaymentRunDetail) {
    option (google.api.http) = {
      get: "/api/v1/finance/treasury/payment-runs/{run_id}"
    };
  }

  // 查询付款运行列表
  rpc ListPaymentRuns(ListPaymentRunsRequest) returns (ListPaymentRunsResponse) {
    option (google.api.http) = {
      get: "/api/v1/finance/treasury/payment-runs"
    };
  }

  // 获取作业状态 (通用)
  rpc GetJobStatus(GetJobStatusRequest) returns (common.v1.JobInfo) {
    option (google.api.http) = {
      get: "/api/v1/finance/treasury/jobs/{job_id}"
    };
  }
}

// ============================================================================
// 数据结构: 消息定义
// ============================================================================

message ProcessBankStatementRequest {
  string company_code = 1;
  bytes raw_statement_data = 2;
  common.v1.BankStatementFormat statement_format = 3;
  common.v1.RequestContext context = 99;
}

message GetBankStatementRequest {
  string statement_id = 1;
  common.v1.RequestContext context = 99;
}

message BankStatementDetail {
  string statement_id = 1;
  string company_code = 2;
  common.v1.BankStatementFormat format = 3;
  repeated BankStatementTransaction transactions = 4;
  common.v1.AuditData audit_data = 5;
  string house_bank = 6;
  string bank_account = 7;
}

message BankStatementTransaction {
  string transaction_id = 1;
  google.protobuf.Timestamp value_date = 2;
  common.v1.MonetaryValue amount = 3;
  string memo = 4;
  string partner_name = 5;
  string transaction_type = 6;
}

message ListBankStatementsRequest {
  string company_code = 1;
  common.v1.DateRange date_range = 2;
  common.v1.PaginationRequest pagination = 98;
  common.v1.RequestContext context = 99;
}

message ListBankStatementsResponse {
  repeated BankStatementSummary statements = 1;
  common.v1.PaginationResponse pagination = 2;
}

message BankStatementSummary {
  string statement_id = 1;
  google.protobuf.Timestamp statement_date = 2;
  string company_code = 3;
}

message ExecutePaymentRunRequest {
  string run_id = 1;
  google.protobuf.Timestamp posting_date = 2;
  PaymentRunParameters parameters = 3;
  common.v1.RequestContext context = 99;
}

message CancelPaymentRunRequest {
  string run_id = 1;
  common.v1.RequestContext context = 99;
}

message PaymentRunParameters {
  repeated string company_codes = 1;
  repeated common.v1.PaymentMethodType payment_methods = 2;
  google.protobuf.Timestamp next_posting_date = 3;
  repeated string vendor_range = 4;
}

message GetPaymentRunRequest {
  string run_id = 1;
  common.v1.RequestContext context = 99;
}

message PaymentRunDetail {
  string run_id = 1;
  common.v1.JobStatus status = 2;
  repeated PaymentDocument paid_documents = 3;
  repeated PaymentException exceptions = 4;
  common.v1.AuditData audit_data = 5;
}

message PaymentDocument {
  common.v1.SystemDocumentReference document_reference = 1;
  common.v1.MonetaryValue amount = 2;
  string payee_name = 3;
  string payment_method = 4;
  string house_bank = 5;
  string bank_account = 6;
  string transaction_type = 7;
}

message PaymentException {
  string document_number = 1;
  string reason = 2;
  string error_code = 3;
}

message ListPaymentRunsRequest {
  string company_code = 1;
  common.v1.DateRange date_range = 2;
  common.v1.PaginationRequest pagination = 98;
  common.v1.RequestContext context = 99;
}

message ListPaymentRunsResponse {
  repeated PaymentRunSummary payment_runs = 1;
  common.v1.PaginationResponse pagination = 2;
}

message PaymentRunSummary {
  string run_id = 1;
  google.protobuf.Timestamp run_date = 2;
  common.v1.JobStatus status = 3;
}

message GetJobStatusRequest {
  string job_id = 1;
  common.v1.RequestContext context = 99;
}
